<resources>
    <string name="app_name">Informasi Pegawai</string>
    <string name="content_text">Lorem Ipsum</string>
    <string name="halal_foodie">Halal Foodie</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Full Name</string>
    <string name="alamat">Address</string>
    <string name="simpan">Save</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logo_halal_foodie">Halal Foodie Logo</string>
    <string name="log_out">Log Out</string>
    <string name="resep_dibuat_oleh">The Recipe Is Made By:</string>
    <string name="uyammy">Uyammy</string>
    <string name="detail_masakan">Food Detail</string>
    <string name="bahan_masakan">Ingredients</string>
    <string name="waktu_memasak">Time of Cooking</string>
    <string name="cara_membuat">How to Make</string>
    <string name="catat_resep">Make Note Recipe</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="name">Nama</string>
    <string name="gaji">Gaji</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="share">Share</string>
    <string name="setting">Setting</string>
    <string name="_1_photos">1 Picture</string>
    <string name="source">Source</string>
    <string name="language">Language</string>
    <string name="change_localization">Change Localization</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="crud">CRUD</string>
    <string name="informasi_pegawai">Informasi Pegawai</string>
    <string name="kembali">Kembali</string>
    <string name="buat_feedback">Buat Feedback</string>
    <string name="laporkan_kejadian">Laporkan Kejadian</string>
    <string name="lokasi">Lokasi</string>
    <string name="cancel">Cancel</string>
    <string name="ajukan_cuti">Ajukan Cuti</string>
    <string name="lama_cuti">Lama Cuti</string>
    <string name="keterangan_cuti">Keterangan Cuti</string>
</resources>
