<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/setting"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/language"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_localization"
        android:textAllCaps="false" />


</LinearLayout>